--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "next-sitemap": "^4.2.3",
     "react": "19.2.0",
